CHANGES.txt - 2010-03-02
------------------------

CHANGES IN CUPS V1.5b1

	- The scheduler now allows writing to /Users/Shared from print filters
	  on Mac OS X.
	- CUPS no longer supports the old ~/.cupsrc or ~/.lpoptions files from
	  CUPS 1.1.x.  The ~/.cups/client.conf and ~/.cups/lpoptions files that
	  were introduced in CUPS 1.2 must now be used.
	- The ipptest tool is now a first-class user program and has several
	  improvements along with new documentation (STR #3484)
	- The cupstestppd tool now warns about non-unique filenames and
	  provides a way to ignore all filename warnings.
	- Dropped support for the recoverable: and recovered: message prefixes.
	- The scheduler now requires that filters and backends have group write
	  permissions disabled.
	- The PPD compiler now checks for overlapping filenames when writing
	  PPD files.
	- The HP-GL/2 filter is no longer included with CUPS (STR #3322)
	- The SCSI backend is no longer included with CUPS (STR #3500)